Fix padding Hero section tablet

--- a/scss/blocks/badge/_badge.scss
+++ b/scss/blocks/badge/_badge.scss
@@ -8,17 +8,7 @@
   margin-bottom: 60px;
 
   @include tablet {
-    font-size: 16px;
-    padding: 18px;
+    padding: 18px 30px 18px 18px;
     margin-bottom: 70px;
-    max-width: 40px;
-  }
-
-  &__text {
-    font-size: 12px;
-    line-height: 0.9;
-    text-transform: uppercase;
-    padding: 0;
-    margin: 0;
   }
 }
