--- a/scss/blocks/hero/_hero.scss
+++ b/scss/blocks/hero/_hero.scss
@@ -9,6 +9,7 @@
     background-image: url("../../assets/images/hero-illustration--tablet.png");
     background-size: 130px 520px;
     background-position: top 160px right 0;
+    padding-top: 0;
     padding-bottom: 50px;
   }
 
